--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html  ng-app="Alaska" lang="en">
+<html  ng-app="Alaska">
 
-    <head>
+    <head lang="en">
 
         <title>Alaska Airlines</title>
 
@@ -9,6 +9,7 @@
 
         <!-- Custom CSS -->
         <link href="./css/main.css" rel="stylesheet">
+        <link href="./css/landing.css" rel="stylesheet">
 
         <!-- Custom Fonts -->
         <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
