index & css adjusted

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,12 @@
 	
 	<title>Alaska Airlines</title>
 	<link href="css/bootstrap.min.css" rel="stylesheet">
+	<link href="css/main.css" rel="stylesheet">
+
+	<! ADD LINKS TO CSS OF YOUR VIEWS HERE ->
+
 	<link href="css/resv-info.css" rel="stylesheet">
+
 	<script src="js/jquery-1.12.2.min.js"> </script>
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/angular.min.js"></script>
