angular app alaska

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	
-	<title>Alaska Airlines</title>
+	<title>Alaska alaskas</title>
 	<link href="css/bootstrap.min.css" rel="stylesheet">
 	<link href="css/main.css" rel="stylesheet">
 
@@ -19,7 +19,7 @@
 
 </head>
 
-<body ng-app='airline'>
+<body ng-app='alaska'>
 	<nav class="navbar navbar-default navbar-fixed-top">
 		<div class="container">
 
