first failed trial

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html  lang="en" >
 
 <head>
-	
+
 	<title>Alaska alaskas</title>
 	<link href="css/bootstrap.min.css" rel="stylesheet">
 	<link href="css/main.css" rel="stylesheet">
@@ -16,6 +16,8 @@
 	<script src="js/angular.min.js"></script>
 	<script src="js/angular-route.min.js"> </script>
 	<script src="js/core.js"></script>
+	<script src="js/controllers/resv-show-controller.js"></script>
+	<script src="js/services/resv-show-service.js"></script>
 
 </head>
 
