Index,Core & passengerInfo

--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,14 @@
 <html  lang="en" >
 
 <head>
-	
+
 	<title>Alaska alaskas</title>
 	<link href="css/bootstrap.min.css" rel="stylesheet">
 	<link href="css/main.css" rel="stylesheet">
 
-	<! ADD LINKS TO CSS OF YOUR VIEWS HERE ->
+
+	<!-- ADD LINKS TO CSS OF YOUR VIEWS HERE -->
+
 
 	<link href="css/resv-info.css" rel="stylesheet">
 
@@ -16,6 +18,9 @@
 	<script src="js/angular.min.js"></script>
 	<script src="js/angular-route.min.js"> </script>
 	<script src="js/core.js"></script>
+	<script src="js/services/resv-show-service.js"></script>
+	<script src="js/controllers/resv-show-controller.js"></script>
+
 
 </head>
 
