--- a/public/index.html
+++ b/public/index.html
@@ -1,54 +1,57 @@
 <!DOCTYPE html>
-<html  lang="en" ng-app='alaska'>
+<html  lang="en" >
 
 <head>
-    
-    <title>Alaska Airlines</title>
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/main.css" rel="stylesheet">
 
-    <! ADD LINKS TO CSS OF YOUR VIEWS HERE ->
+	<title>Alaska alaskas</title>
+	<link href="css/bootstrap.min.css" rel="stylesheet">
+	<link href="css/main.css" rel="stylesheet">
 
-    <link href="css/landing.css" rel="stylesheet">
-    <link href="css/resv-info.css" rel="stylesheet">
 
-    <script src="js/jquery-1.12.2.min.js"> </script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/angular.min.js"></script>
-    <script src="js/angular-route.min.js"> </script>
-    <script src="js/core.js"></script>
+	<!-- ADD LINKS TO CSS OF YOUR VIEWS HERE -->
+
+	<link href="css/landing.css" rel="stylesheet">
+	<link href="css/resv-info.css" rel="stylesheet">
+
+	<script src="js/jquery-1.12.2.min.js"> </script>
+	<script src="js/bootstrap.min.js"></script>
+	<script src="js/angular.min.js"></script>
+	<script src="js/angular-route.min.js"> </script>
+	<script src="js/core.js"></script>
+	<script src="js/services/resv-show-service.js"></script>
+	<script src="js/controllers/resv-show-controller.js"></script>
+	    <script src="js/services/landingSrv.js"></script>
+    <script src="js/controllers/landingCtrl.js"></script>
+
 
 </head>
 
-<body >
-    <nav class="navbar navbar-default navbar-fixed-top">
-        <div class="container">
+<body ng-app='alaska'>
+	<nav class="navbar navbar-default navbar-fixed-top">
+		<div class="container">
 
-            <div class="navbar-header page-scroll">
-                <a class="navbar-brand" id="logo" href="">
+			<div class="navbar-header page-scroll">
+				<a class="navbar-brand" id="logo" href="">
 
-                    <img class="img-responsive"  src="./img/logo.png" alt="">
-                </a>
-            </div>
+					<img class="img-responsive"  src="../img/logo.png" alt="">
+				</a>
+			</div>
 
 
-            <ul class="nav navbar-nav navbar-right">
-                <li class="page-scroll">
-                    <a href="">Book</a>
-                </li>
-                <li class="page-scroll">
-                    <a href="">View Booking</a>
-                </li>
-                <li class="page-scroll">
-                    <a href="">Check Flight</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-
-    
-
-    <div ng-view= ""></div>
+			<ul class="nav navbar-nav navbar-right">
+				<li class="page-scroll">
+					<a href="">Book</a>
+				</li>
+				<li class="page-scroll">
+					<a href="">View Booking</a>
+				</li>
+				<li class="page-scroll">
+					<a href="">Check Flight</a>
+				</li>
+			</ul>
+		</div>
+	</nav>
+	<div ng-view></div>
 
 </body>
 
