--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
 	<script src="js/core.js"></script>
 	<script src="js/services/resv-show-service.js"></script>
 	<script src="js/controllers/resv-show-controller.js"></script>
+	<script type="text/javascript" src="js/controllers/paymentCtrl.js"></script>
 
 
 </head>
