--- a/public/index.html
+++ b/public/index.html
@@ -26,11 +26,11 @@
     <script src="js/core.js"></script>
      
      <!-- Services -->
-     <script src="js/services/resv-show-service.js"></script>
+     <!-- <script src="js/services/resv-show-service.js"></script> -->
 
 
    <!--  Controllers -->
-    <script src="js/controllers/resv-show-controller.js"></script>
+    <!-- <script src="js/controllers/resv-show-controller.js"></script> -->
     <script src="js/controllers/paymentCtrl.js"></script>
     <script src="js/controllers/FlightInfoCtrl.js"></script>
     <script src="js/controllers/flightsCtrl.js"></script>
