--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
 	<script src="js/core.js"></script>
 	<script src="js/services/resv-show-service.js"></script>
 	<script src="js/controllers/resv-show-controller.js"></script>
-
+	<script src="js/controllers/mainCtrl.js"></script>
 
 </head>
 
@@ -38,7 +38,7 @@
 
 			<ul class="nav navbar-nav navbar-right">
 				<li class="page-scroll">
-					<a href="">Book</a>
+					<a ng-click="scrollTo('main')" href="">Book</a>
 				</li>
 				<li class="page-scroll">
 					<a href="">View Booking</a>
@@ -49,7 +49,7 @@
 			</ul>
 		</div>
 	</nav>
-	<div ng-view></div>
+	<div ng-view id="main"></div>
 
 </body>
 
