--- a/public/index.html
+++ b/public/index.html
@@ -22,15 +22,15 @@
 	<script src="js/core.js"></script>
 
 	<!-- controllers -->
-	<script src="js/controllers/resv-show-controller.js"></script>
+	<script src="js/controllers/resvConfirmCtrl.js"></script>
 	<script src="js/controllers/mainCtrl.js"></script>
-	<script src="js/controllers/FlightInfoCtrl.js"></script>
+	<script src="js/controllers/flightInfoCtrl.js"></script>
 	<script src="js/controllers/flightsCtrl.js"></script>
 	<script src="js/controllers/paymentCtrl.js"></script>
-	<script src="js/controllers/SubmitCtr.js"></script>
+	<script src="js/controllers/submitCtrl.js"></script>
 
 	<!--services-->
-	<script src="js/services/resv-show-service.js"></script>
+	<script src="js/services/resvConfirmSrvc.js"></script>
 
 </head>
 
@@ -48,7 +48,7 @@
 
 			<ul class="nav navbar-nav navbar-right">
 				<li class="page-scroll">
-					<a ng-click="scrollTo('main')" href="">Book</a>
+					<a href="/">Book</a>
 				</li>
 				<li class="page-scroll">
 					<a href="">View Booking</a>
