beautify merge with Rana

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,8 @@
 
 	<!-- ADD LINKS TO CSS OF YOUR VIEWS HERE -->
 	<link href="css/resv-info.css" rel="stylesheet">
+	<link href="css/landing.css" rel="stylesheet">
+
 
 	<!-- js files -->
 	<script src="js/jquery-1.12.2.min.js"> </script>
