initial working merge all

--- a/public/index.html
+++ b/public/index.html
@@ -29,9 +29,11 @@
 	<script src="js/controllers/flightsCtrl.js"></script>
 	<script src="js/controllers/paymentCtrl.js"></script>
 	<script src="js/controllers/submitCtrl.js"></script>
-
+	<script src="js/controllers/landingCtrl.js"></script>
 	<!--services-->
 	<script src="js/services/resvConfirmSrvc.js"></script>
+	<script src="js/services/landingSrvc.js"></script>
+
 
 </head>
 
@@ -49,13 +51,13 @@
 
 			<ul class="nav navbar-nav navbar-right">
 				<li class="page-scroll">
-					<a href="/">Book</a>
+					<a href="#/">Book</a>
 				</li>
 				<li class="page-scroll">
-					<a href="">View Booking</a>
+					<a href="##viewBF">View Booking</a>
 				</li>
 				<li class="page-scroll">
-					<a href="">Check Flight</a>
+					<a href="##checkFlight">Check Flight</a>
 				</li>
 			</ul>
 		</div>
