--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,7 @@
 
 			<ul class="nav navbar-nav navbar-right">
 				<li class="page-scroll">
-					<a href="#/">Book</a>
+					<a href="##book">Book</a>
 				</li>
 				<li class="page-scroll">
 					<a href="##viewBF">View Booking</a>
