--- a/public/index.html
+++ b/public/index.html
@@ -34,21 +34,23 @@
 	<script src="js/services/landingSrvc.js"></script>
 
 	<!-- scroll & navbar feature -->
-	<script src="js/smooth-scroll.js"></script>
+	<script src="js/jquery.easing.min.js"></script>
+	<script src="js/scrolling-nav.js"></script>
+
+
 
 </head>
 
-<body ng-app='alaska'>
-	<nav class="navbar navbar-default navbar-fixed-top">
+<body ng-app='alaska' id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
+	<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
 		<div class="container-fluid">
-
-			<div class="navbar-header">
+			<div class="navbar-header page-scroll">
 				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" id="logo" href="#">
+				<a class="navbar-brand page-scroll" id="logo" href="#">
 					<svg version="1.1" class="alaska-logo" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="113px" height="34px" viewBox="0 0 114.7 34.1" enable-background="new 0 0 114.7 34.1" xml:space="preserve">
 						<g>
 							<g>
@@ -65,19 +67,22 @@
 				</a>
 			</div>
 
-			<div class="collapse navbar-collapse" id="myNavbar">
+			<div class="collapse navbar-collapse navbar-ex1-collapse" id="myNavbar">
 				<ul class="nav navbar-nav navbar-right">
-					<li >
-						<a  href="#book" data-target="#book">Book</a>
+					<li class="hidden">
+						<a class="page-scroll" href="#page-top"></a>
 					</li>
 					<li >
-						<a  href="#viewBF" data-target="#viewBF">View Booking</a>
+						<a class="page-scroll" href="#book" >Book</a>
 					</li>
 					<li >
-						<a  href="#checkFlight" data-target="#checkFlight">Check Flight</a>
+						<a class="page-scroll" href="#viewBF" >View Booking</a>
 					</li>
 					<li >
-						<a  href="">About us</a>
+						<a  class="page-scroll" href="#checkFlight" >Check Flight</a>
+					</li>
+					<li >
+						<a class="page-scroll" href="#footer">About us</a>
 					</li>
 				</ul>
 			</div>
