envelope zoom out issue fixed

--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,9 @@
 
 	<!-- contact us-->
 	<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Special+Elite">
+	<link rel="stylesheet" href="css/envelope.css">
+
+
 	<!--snow-->
 	<script src="js/snow.js">
 
@@ -115,10 +118,10 @@
 			<div></div>
 			<div>
 				<p>Contact us!</p>
-				<form>
-					<p><input type="text" name="email" id="email" placeholder="Email:"/></p>
-					<p><input type="text" name="message" id="message" placeholder="Message:"/></p>
-					<p><input type="submit" name="send" id="send" value="Send"/></p>
+				<form >
+					<p><input type="text" name="email" id="email" placeholder="Email:"></p>
+					<p><input type="text" name="message" id="message" placeholder="Message:"></p>
+					<p><input type="submit" name="send" id="send" value="Send"></p>
 				</form>
 			</div>
 			<div>
@@ -132,15 +135,15 @@
 				<i class="line"></i>
 				<i class="line"></i>
 				<i class="line"></i>
-				<i class="line"></i>
-				<i class="line"></i>
 			</div>
 			<div>
 				<i class="line"></i>
 				<i class="line"></i>
 				<i class="line"></i>
+				<i class="line"></i>
 			</div>
 			<div>
+				<i class="line"></i>
 				<i class="line"></i>
 				<i class="line"></i>
 				<i class="line"></i>
