--- a/public/index.html
+++ b/public/index.html
@@ -37,20 +37,18 @@
 	<script src="js/scrolling-nav.js"></script>
 
 	<!-- contact us-->
-	<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Special+Elite">
 	<link rel="stylesheet" href="css/envelope.css">
 
-
-	<!--snow-->
-	<script src="js/snow.js">
-
-	</script>
+	<!-- fonts -->
+	<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Special+Elite">
+	<link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css'>
 
 
 </head>
 
 <body ng-app='alaska' id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
-	<canvas id="snow" class="snow"></canvas>
+	<canvas id="snow"></canvas>
 	<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
 		<div class="container-fluid">
 			<div class="navbar-header page-scroll">
@@ -322,5 +320,8 @@
 			</svg>
 		</div>
 	</div>
+
+		<!--snow-->
+		<!-- <script src="js/snow.js"></script> -->
 </body>
 </html>
