added flights table, shopping cart missing

--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,9 @@
 	<!-- contact us-->
 	<link rel="stylesheet" href="css/envelope.css">
 
-	<!-- fonts -->
+	<!-- fonts & icons-->
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<link href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Special+Elite">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css'>
@@ -97,8 +99,7 @@
 	</nav>
 	<div ng-view id="main"></div>
 
-	<!-- footer styling-->
-	<link href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+
 
 	<div id="footer" class="container-fluid">
 		<nav class="social">
@@ -321,7 +322,7 @@
 		</div>
 	</div>
 
-		<!--snow-->
-		<!-- <script src="js/snow.js"></script> -->
+	<!--snow-->
+	<!-- <script src="js/snow.js"></script> -->
 </body>
 </html>
