search div in landing finished

--- a/public/index.html
+++ b/public/index.html
@@ -299,6 +299,8 @@
 	<script src="js/angular.min.js"></script>
 	<script src="js/angular-route.min.js"> </script>
 	<script src="js/bootstrap.min.js"></script>
+	<script src="https://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.12.0.js"></script>
+
 
 	<!-- main angular routing file -->
 	<script src="js/core.js"></script>
