--- a/public/index.html
+++ b/public/index.html
@@ -19,11 +19,11 @@
 	<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Special+Elite">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css'>
-
+	<script src="http://s.codepen.io/assets/libs/modernizr.js" type="text/javascript"></script>
 
 </head>
 
-<body ng-app='alaska' id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
+<body ng-app='alaska' id="page-top">
 	<canvas id="snow"></canvas>
 	<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
 		<div class="container-fluid">
@@ -55,14 +55,16 @@
 					<li class="hidden">
 						<a class="page-scroll" href="#page-top"></a>
 					</li>
-					<li >
-						<a class="page-scroll" href="#book" >Book</a>
-					</li>
+
 					<li >
 						<a class="page-scroll" href="#viewBF" >View Booking</a>
 					</li>
 					<li >
 						<a  class="page-scroll" href="#checkFlight" >Check Flight</a>
+					</li>
+
+					<li >
+						<a class="page-scroll" href="#searchWrapper" >Book</a>
 					</li>
 					<li >
 						<a class="page-scroll" href="#footer">Contact us</a>
@@ -321,7 +323,9 @@
 	<script src="js/jquery.easing.min.js"></script>
 	<script src="js/scrolling-nav.js"></script>
 	<script src="js/envelope.js"></script>
+	<script src="js/search.js">
 
+	</script>
 
 	<!--snow-->
 	<!-- <script src="js/snow.js"></script> -->
