--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
 
 </head>
 
-<body ng-app='alaska' id="page-top">
+<body ng-app='alaska' id="page-top" ng-controller="mainCtrl">
 	<canvas id="snow"></canvas>
 	<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
 		<div class="container-fluid">
@@ -33,7 +33,7 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand page-scroll" id="logo" href="#">
+				<a class="navbar-brand" id="logo" ng-click="goHome()">
 					<svg version="1.1" class="alaska-logo" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="113px" height="34px" viewBox="0 0 114.7 34.1" enable-background="new 0 0 114.7 34.1" xml:space="preserve">
 						<g>
 							<g>
@@ -55,27 +55,23 @@
 					<li class="hidden">
 						<a class="page-scroll" href="#page-top"></a>
 					</li>
-
 					<li >
-						<a class="page-scroll" href="#viewBF" >View Booking</a>
+						<a class="page-scroll" data-model="#searchWrapper" ng-click="goHome()">Book</a>
 					</li>
 					<li >
-						<a  class="page-scroll" href="#checkFlight" >Check Flight</a>
-					</li>
-
-					<li >
-						<a class="page-scroll" href="#searchWrapper" >Book</a>
+						<a class="page-scroll" data-model="#viewBF" ng-click="goHome()" >View Booking</a>
 					</li>
 					<li >
-						<a class="page-scroll" href="#footer">Contact us</a>
+						<a  class="page-scroll" data-model="#checkFlight" ng-click="goHome()">Check Flight</a>
+					</li>
+					<li >
+						<a class="page-scroll" data-model="#footer" ng-click="goHome()">Contact us</a>
 					</li>
 				</ul>
 			</div>
 		</div>
 	</nav>
 	<div ng-view id="main"></div>
-
-
 
 	<div id="footer" class="container-fluid">
 		<nav class="social">
@@ -320,12 +316,7 @@
 	<script src="js/services/landingSrvc.js"></script>
 
 	<!-- scroll & navbar feature -->
-	<script src="js/jquery.easing.min.js"></script>
-	<script src="js/scrolling-nav.js"></script>
 	<script src="js/envelope.js"></script>
-	<script src="js/search.js">
-
-	</script>
 
 	<!--snow-->
 	<!-- <script src="js/snow.js"></script> -->
