--- a/public/index.html
+++ b/public/index.html
@@ -297,11 +297,17 @@
 	<script src="js/angular.min.js"></script>
 	<script src="js/angular-route.min.js"> </script>
 	<script src="js/bootstrap.min.js"></script>
-	<script src="https://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.12.0.js"></script>
+	<script src="/js/ui-bootstrap-tpls-1.2.5.min.js"></script>
 
 
 	<!-- main angular routing file -->
 	<script src="js/core.js"></script>
+	<!--services-->
+	<script src="js/services/bookingSrvc.js"></script>
+	<script src="js/services/flightInfoSrvc.js"></script>
+	<script src="js/services/flightsSrvc.js"></script>
+	<script src="js/services/landingSrvc.js"></script>
+	<script src="js/services/masterSrvc.js"></script>
 
 	<!-- controllers -->
 	<script src="js/controllers/bookingCtrl.js"></script>
@@ -311,9 +317,7 @@
 	<script src="js/controllers/paymentCtrl.js"></script>
 	<script src="js/controllers/passengerCtrl.js"></script>
 	<script src="js/controllers/landingCtrl.js"></script>
-	<!--services-->
-	<script src="js/services/resvConfirmSrvc.js"></script>
-	<script src="js/services/landingSrvc.js"></script>
+
 
 	<!-- scroll & navbar feature -->
 	<script src="js/envelope.js"></script>
