date issue trial to fix

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 	<title>Alaska Airlines</title>
 	<link href="css/bootstrap.min.css" rel="stylesheet">
 	<link href="css/main.css" rel="stylesheet">
-
+	<link rel="shortcut icon" href="#" />
 
 
 	<!-- contact us-->
@@ -298,7 +298,6 @@
 	<script src="js/angular-route.min.js"> </script>
 	<script src="js/bootstrap.min.js"></script>
 	<script src="/js/ui-bootstrap-tpls-1.2.5.min.js"></script>
-
 
 	<!-- main angular routing file -->
 	<script src="js/core.js"></script>
