--- a/public/404.html
+++ b/public/404.html
@@ -1,34 +1,21 @@
-<<<<<<< HEAD
-=======
-<<<<<<< HEAD
-=======
-<<<<<<< HEAD
->>>>>>> fe85068adfc3c64aca12cfda9131cfe42da3bae9
->>>>>>> 9e5b1916f4dce1f22d301bb139eab27063d1ced7
-<!doctype html>
+
+<!DOCTYPE html>
 
 <html>
-  <head>
-    <title>403 Not Authorized</title>
-    <link rel="stylesheet" href="/styles/bootstrap.min.css">
-  </head>
+<head>
+  <title>403 Not Authorized</title>
+  <link rel="stylesheet" href="/styles/bootstrap.min.css">
+</head>
 
-  <body>
-    <div class="container">
-      <div class="row">
-        <div class="span12">
-          <div style="text-align: center">
-              <h1>Not Found <small><font face="Tahoma" color="red">Error 404</font></small></h1>
-            </div>
+<body>
+  <div class="container">
+    <div class="row">
+      <div class="span12">
+        <div style="text-align: center">
+          <h1>Not Found <small><font face="Tahoma" color="red">Error 404</font></small></h1>
         </div>
       </div>
     </div>
-  </body>
-<<<<<<< HEAD
+  </div>
+</body>
 </html>
-=======
-<<<<<<< HEAD
-</html>
-=======
->>>>>>> fe85068adfc3c64aca12cfda9131cfe42da3bae9
->>>>>>> 9e5b1916f4dce1f22d301bb139eab27063d1ced7
