--- a/www/index.html
+++ b/www/index.html
@@ -16,6 +16,7 @@
         <script src="./lib/ionic/js/ionic.bundle.js"></script>
         <script src="./lib/ionic/js/angular/angular-resource.min.js"></script>
         <script src="./lib/ionicuirouter/ionicUIRouter.js"></script>
+        <script scr="./lib/ionic/js/angular/angular.js"></script>
 
         <!-- cordova script (this will be a 404 during development) -->
         <script src="cordova.js"></script>
@@ -23,6 +24,7 @@
         <!-- your app's js -->
         <script src="./js/core.js"></script>
         <script src="./js/app.js"></script>
+        <script src="./js/controllers/findFlightsCtrl.js"></script>
 
 
         <style type="text/css">
@@ -35,7 +37,7 @@
           .manual-remove-top-padding .scroll{
             padding-top:0px !important;
           }
-          .html{
+          .body{
             background-image: url(./img/d0V9NYLbTCeKQ9rjWOCr_alaska-new.png) no-repeat center
             background-size:cover;
           }
@@ -52,8 +54,7 @@
         </ion-nav-bar>
         <!-- TOP NAVBAR -->
 
-        <!-- ANGULAR DYNAMIC TEMPLATING -->
-
+        <!-- Bottom NAVBAR -->
         <ion-tabs class="tabs-stable tabs-icon-top">
 
             <ion-tab title="Book Flight" icon="ion-android-home" href="#/">
@@ -69,7 +70,7 @@
             </ion-tab>
 
         </ion-tabs>
-        <!-- ANGULAR DYNAMIC TEMPLATING -->
+        <!-- Bottom NAVBAR -->
     </body>
 
 </html>
