--- a/www/index.html
+++ b/www/index.html
@@ -1,73 +1,55 @@
-<!doctype html>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
+    <title></title>
 
-<html ng-app="alaskaIonic">
-    <head>
-        <title>Alaska Airlines</title>
+    <link href="lib/ionic/css/ionic.css" rel="stylesheet">
+    <script src="lib/ionic/js/ionic.bundle.js"></script>
 
+    <!-- cordova script (this will be a 404 during development) -->
+    <script src="cordova.js"></script>
 
-        <meta charset="utf-8">
-        <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-        <title></title>
+    <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
+    <link href="css/ionic.app.css" rel="stylesheet">
+    -->
+     <!--<script src="./lib/ionic/js/angular/angular-resource.min.js"></script> -->
 
-        <link href="./lib/ionic/css/ionic.css" rel="stylesheet">
-        <!-- <link href="css/style.css" rel="stylesheet"> -->
-
-        <!-- ionic/angularjs js -->
-        <script src="./lib/ionic/js/ionic.bundle.js"></script>
-        <script src="./lib/ionic/js/angular/angular-resource.min.js"></script>
-        <script src="./lib/ionicuirouter/ionicUIRouter.js"></script>
-
-        <!-- cordova script (this will be a 404 during development) -->
-        <script src="cordova.js"></script>
-
-        <!-- your app's js -->
-        <script src="./js/core.js"></script>
-        <script src="./js/app.js"></script>
-        <script src="./js/controllers/findFlightsCtrl.js"></script>
-
-
-        <style type="text/css">
-          .platform-ios .manual-ios-statusbar-padding{
-            padding-top:20px;
-          }
-          .manual-remove-top-padding{
-            padding-top:0px; 
-          }
-          .manual-remove-top-padding .scroll{
-            padding-top:0px !important;
-          }
-          .body{
+    <style type="text/css">
+      .platform-ios .manual-ios-statusbar-padding{
+        padding-top:20px;
+      }
+      .manual-remove-top-padding{
+        padding-top:0px; 
+      }
+      .manual-remove-top-padding .scroll{
+        padding-top:0px !important;
+      }
+      .body{
             background-image: url(./img/d0V9NYLbTCeKQ9rjWOCr_alaska-new.png) no-repeat center
             background-size:cover;
-          }
-        </style>
-    </head>
+      }
+    </style>
 
-    <body animation="slide-left-right-ios7">
-        <!-- TOP NAVBAR -->
+    <script src="js/app.js"></script>
+    <script src="js/routes.js"></script>
+    <script src="./js/controllers/findFlightsCtrl.js"></script>
+
+
+    <!-- Only required for Tab projects w/ pages in multiple tabs -->
+    <script src="lib/ionicuirouter/ionicUIRouter.js"></script>
+    
+
+  </head>
+  <body ng-app="alaskaIonic" animation="slide-left-right-ios7">
+  <div>
+    <div>
         <ion-nav-bar class="bar-stable">
-            <ion-nav-back-button class="button-icon icon ion-ios-arrow-back">
-            Back
-            </ion-nav-back-button>
+            <ion-nav-back-button class="button-icon icon ion-ios-arrow-back">Back</ion-nav-back-button>
         </ion-nav-bar>
-
-        <!-- Bottom NAVBAR -->
-        <ion-tabs class="tabs-stable tabs-icon-top">
-
-            <ion-tab title="Book Flight" icon="ion-android-home" href="#/">
-                <ion-nav-view name="findFlights"></ion-nav-view>
-            </ion-tab>
-
-            <ion-tab title="Flight Status" icon="ion-android-plane" href="#/findFlightStatus">
-                <ion-nav-view name="flightStatusSearch"></ion-nav-view>
-            </ion-tab>
-
-            <ion-tab title="View Booking" icon="ion-ios-pricetag" href="#/findBooking">
-                <ion-nav-view name="findBookingSearch"></ion-nav-view>
-            </ion-tab>
-
-        </ion-tabs>
-        <!-- Bottom NAVBAR -->
-    </body>
-
+        <ion-nav-view></ion-nav-view>
+    </div>
+</div>
+  </body>
 </html>
