--- a/www/index.html
+++ b/www/index.html
@@ -35,6 +35,8 @@
     <script src="js/app.js"></script>
     <script src="js/routes.js"></script>
     <script src="./js/controllers/findFlightsCtrl.js"></script>
+    <script src="./js/controllers/flightsCtrl.js"></script>
+    <script src="./js/services/flightsSrvc.js"></script>
 
 
     <!-- Only required for Tab projects w/ pages in multiple tabs -->
