--- a/www/index.html
+++ b/www/index.html
@@ -37,7 +37,7 @@
     <script src="./js/controllers/findFlightsCtrl.js"></script>
     <script src="./js/controllers/flightsCtrl.js"></script>
     <script src="./js/services/flightsSrvc.js"></script>
-
+    <script src="./js/services/masterSrvc.js"></script>
 
     <!-- Only required for Tab projects w/ pages in multiple tabs -->
     <script src="lib/ionicuirouter/ionicUIRouter.js"></script>
