--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css'>
 	<script src="http://s.codepen.io/assets/libs/modernizr.js" type="text/javascript"></script>
+	<script type="text/javascript" src="stripe.js"></script>
 
 </head>
 
