--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css'>
 	<script src="http://s.codepen.io/assets/libs/modernizr.js" type="text/javascript"></script>
+	<script type="text/javascript" src="https://js.stripe.com/v2/"></script>
 
 </head>
 
@@ -290,6 +291,19 @@
 				</g>
 			</svg>
 		</div>
+	</div>
+	<div>
+		<script type="text/ng-template" id="myModalContent.html">
+			<div class="modal-header">
+				<h3 class="modal-title">Sorry!</h3>
+			</div>
+			<div class="modal-body">
+				{{modalMessage}}
+			</div>
+			<div class="modal-footer">
+				<button class="btn btn-primary" type="button" ng-click="ok()">OK</button>
+			</div>
+		</script>
 	</div>
 	<!-- js files -->
 	<script src="js/jquery-1.12.2.min.js"> </script>
