datepicker working,but both are present as references

--- a/www/index.html
+++ b/www/index.html
@@ -7,6 +7,7 @@
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <script src="lib/ionic/js/ionic.bundle.js"></script>
+    <script src="lib/onezonedatepicker/dist/onezone-datepicker.min.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
@@ -27,7 +28,7 @@
         padding-top:0px !important;
       }
       .body{
-            background-image: url(./img/d0V9NYLbTCeKQ9rjWOCr_alaska-new.png) no-repeat center
+            background-image: url(./img/alaska-new.png) no-repeat center
             background-size:cover;
       }
     </style>
