started typeahead but still didnt work

--- a/www/index.html
+++ b/www/index.html
@@ -8,6 +8,7 @@
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <script src="lib/onezonedatepicker/dist/onezone-datepicker.min.js"></script>
+    <script src="js/controllers/typeaheadCtrl.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
