stripe FULLY handled angular (ALL CASES)

--- a/public/index.html
+++ b/public/index.html
@@ -320,6 +320,8 @@
 	<script src="js/services/flightsSrvc.js"></script>
 	<script src="js/services/landingSrvc.js"></script>
 	<script src="js/services/masterSrvc.js"></script>
+	<script src="js/services/confirmSrvc.js"></script>
+
 
 	<!-- controllers -->
 	<script src="js/controllers/bookingCtrl.js"></script>
@@ -329,6 +331,8 @@
 	<script src="js/controllers/paymentCtrl.js"></script>
 	<script src="js/controllers/passengerCtrl.js"></script>
 	<script src="js/controllers/landingCtrl.js"></script>
+	<script src="js/controllers/confirmCtrl.js"></script>
+
 
 
 	<!-- scroll & navbar feature -->
