--- a/public/index.html
+++ b/public/index.html
@@ -15,10 +15,10 @@
 	<!-- fonts & icons-->
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<link href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Special+Elite">
+	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Special+Elite">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css'>
-	<script src="http://s.codepen.io/assets/libs/modernizr.js" type="text/javascript"></script>
+	<script src="https://s.codepen.io/assets/libs/modernizr.js" type="text/javascript"></script>
 	<script type="text/javascript" src="https://js.stripe.com/v2/"></script>
 
 </head>
@@ -310,7 +310,7 @@
 	<script src="js/angular.min.js"></script>
 	<script src="js/angular-route.min.js"> </script>
 	<script src="js/bootstrap.min.js"></script>
-	<script src="/js/ui-bootstrap-tpls-1.2.5.min.js"></script>
+	<script src="js/ui-bootstrap-tpls-1.2.5.min.js"></script>
 
 	<!-- main angular routing file -->
 	<script src="js/core.js"></script>
